# PyZEAL

./: .gitignore  .pylintrc  .readthedocs.yml  MANIFEST.in  MANIFEST.rst  Makefile  README.md  README.rst  asv.conf.json  pyproject.toml  setup.cfg  test_associated.py
.asv/results/: benchmarks.json
.asv/results/MacBook-Air-M2/: 0d40a267-virtualenv-py3.8.json  10a18da1-virtualenv-py3.8.json  17f0e3d4-virtualenv-py3.8.json  1a023962-virtualenv-py3.8.json  1d41de99-virtualenv-py3.8.json  1de2a131-virtualenv-py3.8.json  1e850a7c-virtualenv-py3.8.json  27ced438-virtualenv-py3.8.json  2a2527fe-virtualenv-py3.8.json  2c425e1a-virtualenv-py3.8.json  34791f92-virtualenv-py3.8.json  44f04e1b-virtualenv-py3.8.json  475ac664-virtualenv-py3.8.json  477ee1f4-virtualenv-py3.8.json  4ba87efe-virtualenv-py3.8.json  (+36 more)
.github/workflows/: black.yml  build-codecov.yml  build-windows.yml  build.yml  publish-pypi.yml  python-package.yaml  python-package.yml
benchmarks/: benchmarksRootfinding.py  newton_grid_timings.py  simple_argument_newton_timings.py  simple_argument_timings.py  testing_fixtures.py  testing_resources.py
docs/: algorithms.rst  auto_diff.ipynb  automaticDifferentiation.ipynb  conf.py  containers.rst  faq.rst  getting_started.ipynb  index.rst  intro.rst  pkg1_example.rst  refs.bib  rootfinder.rst  theoretical_background.rst  theory.rst  usage.rst
docs/_static/: pyzeal_core_design.md  refs.bib
docs/faq/: algorithm_data.json  faq.rst  plugin_example.ipynb
docs/misc/: badges.rst  contributing.rst  getting_started.rst  installation.rst  intro.rst  origins.rst  release_notes.rst  script_usage.rst  starter_notebook.ipynb
docs/package_reference/: algorithms.rst  cli.rst  estimators.rst  package_reference.rst  plugins.rst  pyzeal_logging.rst  rootfinders.rst  settings.rst  utils.rst  wrappers.rst
docs/theory/: associated_polynomial.rst  future_directions.rst  newton_grid.rst  simple_argument.rst  simple_argument_newton.rst  theory.rst
docs/user_guide/: estimators.rst  rootfinder.rst  user_guide.rst
pyzeal/: test_polynomial.ipynb
pyzeal/algorithms/: __init__.py  constants.py  finder_algorithm.py  newton_grid.py  polynomial_holo.py  simple_holo.py  simple_holo_newton.py
pyzeal/cli/: __init__.py  __main__.py  cli_controller.py  cli_parser.py  controller_facade.py  parse_results.py  parser_facade.py
pyzeal/plugins/: __init__.py  installation_helper.py  plugin_loader.py  pyzeal_plugin.py
pyzeal/pyzeal_logging/: __init__.py  log_levels.py  log_manager.py  loggable.py  logger_facade.py
pyzeal/pyzeal_types/: __init__.py  algorithm_types.py  estimator_types.py  parallel_types.py  root_types.py  settings_types.py
pyzeal/rootfinders/: __init__.py  finder_interface.py  parallel_finder.py  rootfinder.py
pyzeal/settings/: __init__.py  core_settings_service.py  default_settings.json  invalid_setting_exception.py  json_core_settings.py  json_helper.py  json_settings_service.py  ram_settings_service.py  settings_schema.json  settings_service.py
pyzeal/tests/: test_locator.py
pyzeal/utils/: __init__.py  configuration_exception.py  filter_context.py  finder_progress.py  initialization_handler.py  install_test_facade.py  install_test_handler.py  lambda_wrapper.py  root_context.py  service_locator.py
src/: entry.py  test_polynomial.ipynb
src/algorithms/: finder_algorithm.py  newton_grid.py  polynomial_holo.py  simple_holo.py  simple_holo_newton.py
src/cli/: __main__.py
src/custom_types/: root_types.py
src/deprecated/: finder_interface.py  newton_grid.py  simple_argument.py
src/logging/: log_manager.py  loggable.py
src/pkg1/: entry.py  example.py
src/plugins/: plugin_loader.py
src/pyzeal/: __init__.py  finder_interface.py  newton_grid.py  parallel_finder.py  rootfinder.py  simple_argument.py
src/pyzeal_algorithms/: constants.py  finder_algorithm.py  newton_grid.py  polynomial_holo.py  simple_holo.py  simple_holo_newton.py
src/pyzeal_cli/: __main__.py  cli_parser.py  entry.py  parse_results.py  parser_facade.py
src/pyzeal_logging/: config.py  log_levels.py  log_manager.py  loggable.py  logger.py  logger_facade.py
src/pyzeal_plugins/: installation_helper.py  plugin_loader.py  pyzeal_plugin.py
src/pyzeal_settings/: default_settings.json  invalid_setting_exception.py  json_settings_service.py  settings_schema.json  settings_service.py
src/pyzeal_types/: algorithm_types.py  container_types.py  filter_types.py  init_modes.py  parallel_types.py  root_types.py
src/pyzeal_utils/: algorithm_factory.py  container_factory.py  filter_context.py  filter_roots.py  finder_progress.py  initialization_handler.py  lambda_wrapper.py  plain_container.py  root_container.py  root_context.py  rounding_container.py  service_configuration_exception.py  service_locator.py
src/rootfinder/: finder_interface.py  newton_grid.py  rootfinder.py  simple_argument.py
src/rootfinders/: __init__.py  finder_interface.py  parallel_finder.py  rootfinder.py
src/settings/: json_settings_service.py  settings_service.py
src/utils/: configuration_exception.py  filter_context.py  filter_roots.py  initialization_handler.py  lambda_wrapper.py  root_context.py
test/: .coveragerc  test_example.py  test_newton_grid.py  test_simple_argument.py  test_simple_argument_newton.py  testing_fixtures.py  testing_resources.py  testing_utils.py
test/test_pkg1/: test_example.py
tests/: .coveragerc  test_newton_grid.py  test_simple_argument.py  test_simple_argument_newton.py
tests/algorithms/: test_newton_grid_algo.py  test_simple_argument_algo.py  test_simple_argument_newton_algo.py
tests/benchmarks/: newton_grid_timings.py  simple_argument_newton_timings.py  simple_argument_timings.py
tests/cli/: test_cli.py
tests/containers/: test_plain_container.py  test_rounding_container.py
tests/estimators/: test_quadrature_estimator.py  test_summation_estimator.py
tests/resources/: testing_estimator_resources.py  testing_fixtures.py  testing_resources.py  testing_utils.py
tests/rootfinders/: test_newton_grid.py  test_simple_argument.py  test_simple_argument_newton.py
(+91 files in other folders)
