[metadata]
name = PyZEAL
version = 0.0.2
author = Philipp Schuette
author_email = pschuet2@mail.uni-paderborn.de
description = Python successor to the ZEAL package calculating divisors of holomorphic and meromorphic functions
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Spectral-Analysis-UPB/PyZEAL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21
    cython
    matplotlib
    numba>=0.55
    scipy>=1.9.1
    rich>=12.2.0
package_dir =
    = src
include_package_data = True

[options.package_data]
PyZEAL = py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	pyzeal = pyzeal_cli.__main__:PyZEALEntry.mainPyZEAL

[options.extras_require]
dev =
	mypy
	mypy-extensions
	hypothesis
	flake8
	pytest
	pytest-cov
	pytest-mock
	docstr-coverage
	pylint
	isort
	sphinx
	nbsphinx
	sphinxcontrib-bibtex
	check-jsonschema
	black

[mypy]
python_version = 3.8
strict = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
ignore_missing_imports = True
show_error_codes = True
disable_error_code = type-abstract, no-untyped-call

[tool:pytest]
junit_family = legacy
filterwarnings = ignore::DeprecationWarning
pythonpath = tests/benchmarks/resources
markers =
    slow: slow tests.

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", ]

[flake8]
max-complexity = 11
ignore = E203, W503
per-file-ignores =
    src/pyzeal_settings/json_settings_service.py:C901

[pycodestyle]
ignore = E203, W503
max-line-length = 79
statistics = true
