[metadata]
name = PyZEAL
version = 0.0.2
author = Philipp Schuette
author_email = pschuet2@mail.uni-paderborn.de
description = Python successor to the ZEAL package calculating divisors of holomorphic and meromorphic functions
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Spectral-Analysis-UPB/PyZEAL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    numpy>=1.21
    cython
    matplotlib
    numba>=0.55
    scipy>=1.9.1
    rich>=12.2.0
packages =
    pyzeal
package_dir =
    pyzeal = pyzeal
include_package_data = True

[options.entry_points]
console_scripts =
	pyzeal = pyzeal.cli.__main__:PyZEALEntry.mainPyZEAL

[options.extras_require]
dev =
	mypy
	mypy-extensions
	hypothesis
	flake8<6.0.0
	pytest
	pytest-cov
	pytest-mock
	docstr-coverage
	pylint
	isort
	sphinx
	nbsphinx
	sphinxcontrib-bibtex
	check-jsonschema
	black

[mypy]
python_version = 3.8
strict = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True
# ignore_missing_imports = True
show_error_codes = True
disable_error_code = type-abstract, no-untyped-call

[tool:pytest]
junit_family = legacy
filterwarnings = ignore::DeprecationWarning
markers =
    slow: slow tests.

[flake8]
max-complexity = 11
ignore = E203, W503
per-file-ignores =
    pyzeal/pyzeal_settings/json_settings_service.py:C901

[pycodestyle]
ignore = E203, W503
max-line-length = 79
statistics = true
